--- a/MICCAI/AutoPET2023/example/model_genesis.ipynb
+++ b/MICCAI/AutoPET2023/example/model_genesis.ipynb
@@ -6,49 +6,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch "
+    "import numpy as np\n",
+    "from model_genesis import get_pair\n",
+    "from easydict import EasyDict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.random.random([1, 1, 128, 128, 128])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "args = EasyDict()\n",
+    "args.genesis_args = EasyDict()\n",
+    "args.genesis_args.nonlinear_rate = 0.9  # prob of non-linear transformation\n",
+    "args.genesis_args.local_rate = 0.5      # prob of local pixel shuffling\n",
+    "args.genesis_args.paint_rate = 0.9      # prob of (in/out) painting \n",
+    "args.genesis_args.outpaint_rate = 0.8   # prob of outer painting\n",
+    "args.genesis_args.inpaint_rate = 0.2    # prob of inner painting\n",
+    "\n",
+    "# for model genesis, basic augmentation\n",
+    "args.genesis_args.rotation_rate = 0.0\n",
+    "args.genesis_args.flip_rate = 0.4\n",
+    "args.genesis_args.norm_type = \"minmax\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['epoch', 'state_dict', 'optimizer_state_dict'])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ret = torch.load('/root/Competitions/MICCAI/AutoPET2023/example/Genesis_Chest_CT.pt', map_location='cpu')\n",
-    "ret.keys()"
+    "_ = get_pair(x, 1, args.genesis_args)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "odict_keys(['module.down_tr64.ops.0.conv1.weight', 'module.down_tr64.ops.0.conv1.bias', 'module.down_tr64.ops.0.bn1.weight', 'module.down_tr64.ops.0.bn1.bias', 'module.down_tr64.ops.0.bn1.running_mean', 'module.down_tr64.ops.0.bn1.running_var', 'module.down_tr64.ops.0.bn1.num_batches_tracked', 'module.down_tr64.ops.1.conv1.weight', 'module.down_tr64.ops.1.conv1.bias', 'module.down_tr64.ops.1.bn1.weight', 'module.down_tr64.ops.1.bn1.bias', 'module.down_tr64.ops.1.bn1.running_mean', 'module.down_tr64.ops.1.bn1.running_var', 'module.down_tr64.ops.1.bn1.num_batches_tracked', 'module.down_tr128.ops.0.conv1.weight', 'module.down_tr128.ops.0.conv1.bias', 'module.down_tr128.ops.0.bn1.weight', 'module.down_tr128.ops.0.bn1.bias', 'module.down_tr128.ops.0.bn1.running_mean', 'module.down_tr128.ops.0.bn1.running_var', 'module.down_tr128.ops.0.bn1.num_batches_tracked', 'module.down_tr128.ops.1.conv1.weight', 'module.down_tr128.ops.1.conv1.bias', 'module.down_tr128.ops.1.bn1.weight', 'module.down_tr128.ops.1.bn1.bias', 'module.down_tr128.ops.1.bn1.running_mean', 'module.down_tr128.ops.1.bn1.running_var', 'module.down_tr128.ops.1.bn1.num_batches_tracked', 'module.down_tr256.ops.0.conv1.weight', 'module.down_tr256.ops.0.conv1.bias', 'module.down_tr256.ops.0.bn1.weight', 'module.down_tr256.ops.0.bn1.bias', 'module.down_tr256.ops.0.bn1.running_mean', 'module.down_tr256.ops.0.bn1.running_var', 'module.down_tr256.ops.0.bn1.num_batches_tracked', 'module.down_tr256.ops.1.conv1.weight', 'module.down_tr256.ops.1.conv1.bias', 'module.down_tr256.ops.1.bn1.weight', 'module.down_tr256.ops.1.bn1.bias', 'module.down_tr256.ops.1.bn1.running_mean', 'module.down_tr256.ops.1.bn1.running_var', 'module.down_tr256.ops.1.bn1.num_batches_tracked', 'module.down_tr512.ops.0.conv1.weight', 'module.down_tr512.ops.0.conv1.bias', 'module.down_tr512.ops.0.bn1.weight', 'module.down_tr512.ops.0.bn1.bias', 'module.down_tr512.ops.0.bn1.running_mean', 'module.down_tr512.ops.0.bn1.running_var', 'module.down_tr512.ops.0.bn1.num_batches_tracked', 'module.down_tr512.ops.1.conv1.weight', 'module.down_tr512.ops.1.conv1.bias', 'module.down_tr512.ops.1.bn1.weight', 'module.down_tr512.ops.1.bn1.bias', 'module.down_tr512.ops.1.bn1.running_mean', 'module.down_tr512.ops.1.bn1.running_var', 'module.down_tr512.ops.1.bn1.num_batches_tracked', 'module.up_tr256.up_conv.weight', 'module.up_tr256.up_conv.bias', 'module.up_tr256.ops.0.conv1.weight', 'module.up_tr256.ops.0.conv1.bias', 'module.up_tr256.ops.0.bn1.weight', 'module.up_tr256.ops.0.bn1.bias', 'module.up_tr256.ops.0.bn1.running_mean', 'module.up_tr256.ops.0.bn1.running_var', 'module.up_tr256.ops.0.bn1.num_batches_tracked', 'module.up_tr256.ops.1.conv1.weight', 'module.up_tr256.ops.1.conv1.bias', 'module.up_tr256.ops.1.bn1.weight', 'module.up_tr256.ops.1.bn1.bias', 'module.up_tr256.ops.1.bn1.running_mean', 'module.up_tr256.ops.1.bn1.running_var', 'module.up_tr256.ops.1.bn1.num_batches_tracked', 'module.up_tr128.up_conv.weight', 'module.up_tr128.up_conv.bias', 'module.up_tr128.ops.0.conv1.weight', 'module.up_tr128.ops.0.conv1.bias', 'module.up_tr128.ops.0.bn1.weight', 'module.up_tr128.ops.0.bn1.bias', 'module.up_tr128.ops.0.bn1.running_mean', 'module.up_tr128.ops.0.bn1.running_var', 'module.up_tr128.ops.0.bn1.num_batches_tracked', 'module.up_tr128.ops.1.conv1.weight', 'module.up_tr128.ops.1.conv1.bias', 'module.up_tr128.ops.1.bn1.weight', 'module.up_tr128.ops.1.bn1.bias', 'module.up_tr128.ops.1.bn1.running_mean', 'module.up_tr128.ops.1.bn1.running_var', 'module.up_tr128.ops.1.bn1.num_batches_tracked', 'module.up_tr64.up_conv.weight', 'module.up_tr64.up_conv.bias', 'module.up_tr64.ops.0.conv1.weight', 'module.up_tr64.ops.0.conv1.bias', 'module.up_tr64.ops.0.bn1.weight', 'module.up_tr64.ops.0.bn1.bias', 'module.up_tr64.ops.0.bn1.running_mean', 'module.up_tr64.ops.0.bn1.running_var', 'module.up_tr64.ops.0.bn1.num_batches_tracked', 'module.up_tr64.ops.1.conv1.weight', 'module.up_tr64.ops.1.conv1.bias', 'module.up_tr64.ops.1.bn1.weight', 'module.up_tr64.ops.1.bn1.bias', 'module.up_tr64.ops.1.bn1.running_mean', 'module.up_tr64.ops.1.bn1.running_var', 'module.up_tr64.ops.1.bn1.num_batches_tracked', 'module.out_tr.final_conv.weight', 'module.out_tr.final_conv.bias'])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ret['state_dict'].keys()"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
