--- a/MICCAI/AutoPET2023/example/model_genesis.ipynb
+++ b/MICCAI/AutoPET2023/example/model_genesis.ipynb
@@ -8,6 +8,9 @@
    "source": [
     "import numpy as np\n",
     "from model_genesis import get_pair\n",
+    "\n",
+    "import torch\n",
+    "from modelgenesis_utils import get_pair as torch_get_pair\n",
     "from easydict import EasyDict"
    ]
   },
@@ -17,7 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.random.random([1, 1, 128, 128, 128])"
+    "x = np.random.random([1, 1, 128, 128, 128])\n",
+    "tensor = torch.rand([1, 1, 128, 128, 128], requires_grad=True)"
    ]
   },
   {
@@ -47,6 +51,51 @@
    "outputs": [],
    "source": [
     "_ = get_pair(x, 1, args.genesis_args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor.requires_grad=True\n",
+      "local_pixel_shuffling image_temp.requires_grad=False\n",
+      "local_pixel_shuffling orig_image.requires_grad=False\n",
+      "local_pixel_shuffling local_shuffling_x.requires_grad=False\n",
+      "nonlinear_transformation nonlinear_x.requires_grad=False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'{tensor.requires_grad=}')\n",
+    "_ = torch_get_pair(tensor, 1, args.genesis_args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor.requires_grad=True\n",
+      "local_pixel_shuffling image_temp.requires_grad=False\n",
+      "local_pixel_shuffling orig_image.requires_grad=False\n",
+      "local_pixel_shuffling local_shuffling_x.requires_grad=False\n",
+      "nonlinear_transformation nonlinear_x.requires_grad=False\n",
+      "image_out_painting x.requires_grad=False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'{tensor.requires_grad=}')\n",
+    "_ = torch_get_pair(tensor, 1, args.genesis_args)"
    ]
   },
   {
