--- a/DACON/4. JUMP AI 2023/example/[Baseline]_Morgan Fingerprint + MLP.ipynb
+++ b/DACON/4. JUMP AI 2023/example/[Baseline]_Morgan Fingerprint + MLP.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7f487ab4",
    "metadata": {},
    "outputs": [],
@@ -66,8 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('./train.csv')\n",
-    "test = pd.read_csv('./test.csv')"
+    "train = pd.read_csv('/root/Competitions/DACON/4. JUMP AI 2023/data/train.csv')\n",
+    "test = pd.read_csv('/root/Competitions/DACON/4. JUMP AI 2023/data/test.csv')"
    ]
   },
   {
@@ -356,7 +356,6 @@
     "        running_loss = 0\n",
     "        for inputs, targets in train_loader:\n",
     "            optimizer.zero_grad()\n",
-    "            \n",
     "            output = model(inputs)\n",
     "            loss = criterion(output, targets)\n",
     "            loss.backward()\n",
@@ -390,27 +389,10 @@
      "output_type": "stream",
      "text": [
       "Training Start: MLM\n",
-      "Epoch: 0/1000, Train Loss: 2092.469082919034, Valid Loss: 1900.7300211588542\n",
-      "Epoch: 100/1000, Train Loss: 300.07023481889206, Valid Loss: 1555.84912109375\n",
-      "Epoch: 200/1000, Train Loss: 183.3335224498402, Valid Loss: 1510.0748291015625\n",
-      "Epoch: 300/1000, Train Loss: 141.89285347678444, Valid Loss: 1457.3175048828125\n",
-      "Epoch: 400/1000, Train Loss: 113.00318908691406, Valid Loss: 1575.0428873697917\n",
-      "Epoch: 500/1000, Train Loss: 89.93183968283914, Valid Loss: 1489.7320149739583\n",
-      "Epoch: 600/1000, Train Loss: 92.16542330655184, Valid Loss: 1491.2755940755208\n",
-      "Epoch: 700/1000, Train Loss: 85.29120150479403, Valid Loss: 1575.921875\n",
-      "Epoch: 800/1000, Train Loss: 78.74117417768998, Valid Loss: 1586.5774739583333\n",
-      "Epoch: 900/1000, Train Loss: 69.2516361583363, Valid Loss: 1576.6572265625\n",
-      "Training Start: HLM\n",
-      "Epoch: 0/1000, Train Loss: 3230.5837180397725, Valid Loss: 2635.5509440104165\n",
-      "Epoch: 100/1000, Train Loss: 397.3243685635653, Valid Loss: 1358.5394287109375\n",
-      "Epoch: 200/1000, Train Loss: 217.6745869029652, Valid Loss: 1481.8584391276042\n",
-      "Epoch: 300/1000, Train Loss: 166.2790617509322, Valid Loss: 1593.5834554036458\n",
-      "Epoch: 400/1000, Train Loss: 128.60101040926847, Valid Loss: 1457.6752522786458\n",
-      "Epoch: 500/1000, Train Loss: 118.78044752641158, Valid Loss: 1434.3185221354167\n",
-      "Epoch: 600/1000, Train Loss: 105.55956198952414, Valid Loss: 1505.4202880859375\n",
-      "Epoch: 700/1000, Train Loss: 94.39194280450994, Valid Loss: 1568.5218505859375\n",
-      "Epoch: 800/1000, Train Loss: 89.45942063765092, Valid Loss: 1559.5579020182292\n",
-      "Epoch: 900/1000, Train Loss: 83.95151381059127, Valid Loss: 1482.4597574869792\n"
+      "Epoch: 0/1000, Train Loss: 2092.469171697443, Valid Loss: 1900.7298583984375\n",
+      "Epoch: 100/1000, Train Loss: 312.8581015846946, Valid Loss: 1531.8120524088542\n",
+      "Epoch: 200/1000, Train Loss: 186.63727777654475, Valid Loss: 1541.1591389973958\n",
+      "Epoch: 300/1000, Train Loss: 138.80317341197622, Valid Loss: 1460.1436360677083\n"
      ]
     }
    ],
@@ -432,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "3cbc3181",
    "metadata": {},
    "outputs": [],
@@ -451,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "e5d8a4e4",
    "metadata": {},
    "outputs": [],
@@ -470,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "d9794de7",
    "metadata": {},
    "outputs": [],
@@ -489,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "a8e574c0",
    "metadata": {},
    "outputs": [
@@ -614,13 +596,13 @@
     }
    ],
    "source": [
-    "submission = pd.read_csv('./sample_submission.csv')\n",
+    "submission = pd.read_csv('/root/Competitions/DACON/4. JUMP AI 2023/data/sample_submission.csv')\n",
     "submission"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "569d8575",
    "metadata": {},
    "outputs": [
@@ -757,7 +739,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission.to_csv('baseline_submission.csv', index=False)"
+    "submission.to_csv('/root/Competitions/DACON/4. JUMP AI 2023/out/baseline_submission.csv', index=False)"
    ]
   }
  ],
@@ -783,7 +765,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
