--- a/Kaggle/CXR(Pneumonia)/example/data_MeanStd.calc.ipynb
+++ b/Kaggle/CXR(Pneumonia)/example/data_MeanStd.calc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,16 +14,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/spine/lib/python3.10/site-packages/monai/utils/deprecate_utils.py:321: FutureWarning: monai.transforms.io.array LoadImage.__init__:image_only: Current default value of argument `image_only=False` has been deprecated since version 1.1. It will be changed to `image_only=True` in version 1.3.\n",
+      "  warn_deprecated(argname, msg, warning_category)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(tensor(142.3909), tensor(255.), tensor(0.))"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5216/5216 [00:57<00:00, 91.21it/s] \n"
+      "100%|██████████| 5216/5216 [00:56<00:00, 91.62it/s] \n"
      ]
     }
    ],
@@ -63,6 +71,10 @@
     "scaler = ScaleIntensityRange(a_min=0., a_max=255., b_min=0., b_max=1., clip=True)\n",
     "\n",
     "cnt = 0 \n",
+    "max_x = 0\n",
+    "max_y = 0\n",
+    "min_y = 10000\n",
+    "min_x = 10000\n",
     "x = 0\n",
     "y = 0 \n",
     "mean = 0 \n",
@@ -73,6 +85,17 @@
     "    data = loader(path)[0]\n",
     "    # print( data.size())\n",
     "    c, w, h = data.size()\n",
+    "    \n",
+    "    if max_x < w:\n",
+    "        max_x = w \n",
+    "    if max_y < h:\n",
+    "        max_y = h\n",
+    "    if min_x> w:\n",
+    "        min_x = w\n",
+    "        \n",
+    "    if min_y > h:\n",
+    "        min_y = h\n",
+    "        \n",
     "    \n",
     "    x += w\n",
     "    y += h\n",
@@ -85,6 +108,25 @@
     "    cnt += L\n",
     "    mean += L * img_mean\n",
     "    var += (img_var + img_mean**2) * L    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1320.6108128834355 968.0747699386503\n",
+      "2916 2663\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x/5216, y/5216)\n",
+    "print(max_x, max_y)"
    ]
   },
   {
